--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
       <link rel="icon" href="%PUBLIC_URL%/logo.svg" />
       <meta name="viewport" content="width=device-width, initial-scale=1" />
       <meta name="theme-color" content="#000000" />
-      <meta name="description" content="Web site created using create-react-app" />
+      <meta name="description" content="Venta de productos de muy buena calidad para el cuidado de tu cabello y rostro" />
       <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo.png" />
 
       <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
